--- a/users/user.html
+++ b/users/user.html
@@ -15,12 +15,67 @@
 <script src="https://unpkg.com/vue-router@3.0.1"></script>
 
 <script type="text/x-template" id="user-list">
-    <div>ユーザー一覧ページです。</div>
+    <div>
+        <div class="loading" v-if="loading">読み込み中…</div>
+        <div v-if="error" class="error">
+            {{ error }}
+        </div>
+        <!-- ユーザーがロードされたらユーザーの名前を表示する -->
+        <div v-for="user in users" :key="user.id">
+            <h2>{{ user.name }}</h2>
+        </div>
+    </div>
 </script>
 
 <script>
+    var getUsers = function(callback){
+        setTimeout(function(){
+            callback(null, [
+                {
+                    id: 1,
+                    name: 'Takuya Tejima'
+                },
+                {
+                    id: 2,
+                    name: 'Yohei Noda'
+                }
+            ])
+        }, 1000)
+    }
+    
     var UserList = {
         template: '#user-list',
+        data: function(){
+            return {
+                loading: false,
+                users: function(){
+                    return []
+                },
+                error: null
+            }
+        },
+
+        created: function(){
+            this.fetchData()
+        },
+
+        watch: {
+            '$route': 'fetchData'
+        },
+
+        methods: {
+            fetchData: function(){
+                this.loading = true
+                getUsers((function(err, users){
+                    this.loading = false
+                    if(err){
+                        this.error = err.toString()
+                    } else {
+                        this.users = users
+                    }
+                }).bind(this))
+            }
+        }
     }
 
     var router = new VueRouter({
