--- a/users/user.html
+++ b/users/user.html
@@ -7,6 +7,7 @@
     <nav>
         <router-link to="/top">トップページ</router-link>
         <router-link to="/users">ユーザー一覧ページ</router-link>
+        <router-link to="/users/new?redirect=true">新規ユーザー登録</router-link>
     </nav>
     <router-view></router-view>
 </div>
@@ -26,20 +27,150 @@
         </div>
     </div>
 </script>
+<script type="text/x-template" id="user-create">
+    <div>
+        <div class="sending" v-if="sending">Sending...</div>
+        <div>
+            <h2>新規ユーザー作成</h2>
+            <div>
+                <label>名前:</label>
+                <input type="text" v-model="user.name">
+            </div>
+            <div>
+                <label>説明文:</label>
+                <textarea v-model="user.description"></textarea>
+            </div>
+            <div v-if="error" class="error">
+                {{ error }}
+            </div>
+            <div>
+                <input type="button" @click="createUser" value="送信">
+            </div>
+        </div>
+    </div>
+</script>
+<script type="text/x-template" id="user-detail">
+    <div>
+        <div class="loading" v-if="loading">読み込み中…</div>
+        <div v-if="error" class="error">
+            {{ error }}
+        </div>
+        <div v-if="user">
+            <h2>{{ user.name }}</h2>
+            <p>{{ user.description }}</p>
+        </div>
+    </div>
+</script>
 
 <script>
+    var userData = [
+        {
+            id: 1,
+            name: 'Takuya Tejima',
+            description: '東南アジアで働くエンジニアです。'
+        },
+        {
+            id: 2,
+            name: 'Yohei Noda',
+            description: 'アウトドア・フットサルが趣味のエンジニアです。'
+        }
+    ]
+
+    var getUser = function(userId, callback){
+        setTimeout(function(){
+            var filteredusers = userData.filter(function (user){
+                return user.id === parseInt(userId, 10)
+            })
+            callback(null, filteredusers && filteredusers[0])
+        }, 1000)
+    }
+
+    var postUser = function(params, callback){
+        setTimeout(function(){
+            params.id = userData.length + 1
+            userData.push(params)
+            callback(null, params)
+        }, 1000)
+    }
+
+    var UserCreate = {
+        template: '#user-create',
+        data: function(){
+            return {
+                sending: false,
+                user: this.defaultUser(),
+                error: null
+            }
+        },
+
+        created: function(){
+        },
+
+        methods: {
+            defaultUser: function(){
+                return {
+                    name: '',
+                    description: ''
+                }
+            },
+
+            createUser: function(){
+                if(this.user.name.trim() === ''){
+                    this.error = 'Nameは必須です'
+                    return
+                }
+                if(this.user.description.trim() === ''){
+                    this.error = 'Descriptionは必須です'
+                    return
+                }
+                postUser(this.user, (function(err, user){  
+                    this.sending = false
+                    if(err){
+                        this.error = err.toString()
+                    } else {
+                        this.error = null
+                        this.user = this.defaultUser()
+                        alert('新規ユーザーが作成されました')
+                        this.$router.push('/users')
+                    }
+                }).bind(this))
+            }
+        }
+    }
+
+    var UserDetail = {
+        template: '#user-detail',
+        data: function(){
+            return {
+                loading: false,
+                user: null,
+                error: null
+            }
+        },
+        created: function(){
+            this.fetchData()
+        },
+        watch: {
+            '$route': 'fetchData'
+        },
+        methods: {
+            fetchData: function(){
+                this.loading = true
+                getUser(this.$route.params.userId, (function(err, user){
+                    this.loading = false
+                    if(err){
+                        this.error = err.toString()
+                    } else {
+                        this.user = user
+                    }
+                }).bind(this))
+            }
+        }
+    }
+
     var getUsers = function(callback){
         setTimeout(function(){
-            callback(null, [
-                {
-                    id: 1,
-                    name: 'Takuya Tejima'
-                },
-                {
-                    id: 2,
-                    name: 'Yohei Noda'
-                }
-            ])
+            callback(null, userData)
         }, 1000)
     }
     
@@ -89,6 +220,14 @@
             {
                 path: '/users',
                 component: UserList
+            },
+            {
+                path: '/users/new',
+                component: UserCreate
+            },
+            {
+                path: '/users/:userId',
+                component: UserDetail
             }
         ]
     })
